migrate to self-contained fat binary with bundled JRE and candidate list UI (#5)
* Migrate TSF to fat binary

* Migrate Proxy to self-contained

* implement candidate list UI, bundled JRE support, and IPC protocol overhaul

* Fix false positive null check